--- a/flights/templates/home.html
+++ b/flights/templates/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <title>Bitchin'</title>
+        <title>Where's liz'</title>
           <style type="text/css">
             html, body, #map-canvas { height: 100%; margin: 0; padding: 0;}
             .lizloc {
