Protocol-relative URL for maps

--- a/flights/templates/home.html
+++ b/flights/templates/home.html
@@ -25,7 +25,7 @@
           </style>
 
         <script type="text/javascript"
-            src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBEh3AEDYoo0lQ5kkbtyNoPfxm8VNgW28Q&sensor=false">
+            src="//maps.googleapis.com/maps/api/js?key=AIzaSyBEh3AEDYoo0lQ5kkbtyNoPfxm8VNgW28Q&sensor=false">
         </script>
         <script type="text/javascript">
          function initialize() {
